# kb-MultiCavas

./: .env.backend.example  .env.db.example  .gitignore  DEPLOYMENT.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
.github/workflows/: ci.yml
apps/api/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
apps/api/core/: config.py  logs.py
apps/api/crud/: agent.py  agent_state.py  conversation.py  evaluation_result.py  message.py  team.py
apps/api/graphs/: graph.py  nodes.py  state.py
apps/api/models/: agent_state.py  agent_team.py  conversation_message.py  evaluation_result.py
apps/api/routers/: agent_states.py  agents.py  conversations.py  evaluation_results.py  mcp.py  messages.py  teams.py
apps/api/schemas/: agent.py  agent_state.py  conversation.py  evaluation_result.py  message.py  team.py
apps/api/services/: graph_service.py
apps/api/tests/: conftest.py  test_agent_states.py  test_agents.py  test_conversations.py  test_evaluation_results.py  test_graph_service.py  test_memory_integration.py  test_messages.py  test_teams.py
apps/web/: .dockerignore  .env.example  Dockerfile  README.md  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/e2e/: agents.spec.ts  conversations.spec.ts  smoke.spec.ts  teams.spec.ts
apps/web/src/app/: types.ts
apps/web/src/app/(canvas-pages)/: layout.tsx
apps/web/src/lib/services/: agentService.ts  agentStateService.ts  conversationService.ts  evaluationResultService.ts  messageService.ts  teamService.ts
(+24 files in other folders)
